--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -15,16 +15,12 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u <your-username> --password-stdin
 
     - name: Build and push Docker image (cache)
       run: |
-        docker build -t ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest .
-        docker push ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest
+        docker build -t ghcr.io/acc-vcc/action-test/qt-log4cpp-app:latest .
+        docker push ghcr.io/acc-vcc/action-test/qt-log4cpp-app:latest
 
     - name: Run build (make only for PR)
       if: github.event_name == 'pull_request'
@@ -40,14 +36,10 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u <your-username> --password-stdin
 
     - name: Pull cached Docker image
-      run: docker pull ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest
+      run: docker pull ghcr.io/acc-vcc/action-test/qt-log4cpp-app:latest
 
     - name: Run package (make package)
       run: docker run --rm -v ${{ github.workspace }}:/app ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest make package
