--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Log in to GitHub Container Registry
-      run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u <your-username> --password-stdin
+      run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u acc-vcc --password-stdin
 
     - name: Build and push Docker image (cache)
       run: |
@@ -36,7 +36,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Log in to GitHub Container Registry
-      run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u <your-username> --password-stdin
+      run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u acc-vcc --password-stdin
 
     - name: Pull cached Docker image
       run: docker pull ghcr.io/acc-vcc/action-test/qt-log4cpp-app:latest
