--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Run build (make only for PR)
       if: github.event_name == 'pull_request'
-      run: docker run --rm -v ${{ github.workspace }}:/app ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest make
+      run: docker run --rm -v ${{ github.workspace }}:/app ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest ./build.sh
 
   package:
     if: github.event_name == 'push'
@@ -45,7 +45,7 @@ jobs:
       run: docker pull ghcr.io/acc-vcc/action-test/qt-log4cpp-app:latest
 
     - name: Run package (make package)
-      run: docker run --rm -v ${{ github.workspace }}:/app ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest make package
+      run: docker run --rm -v ${{ github.workspace }}:/app ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest ./build.sh package
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
