--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -14,15 +14,17 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+      with:
+        driver: docker-container
+
     - name: Log in to GitHub Container Registry
       run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u acc-vcc --password-stdin
 
-    - name: Pull cached image
-      run: docker pull ghcr.io/acc-vcc/action-test/qt-log4cpp-app:latest || true
-
     - name: Make build.sh executable
       run: chmod +x build.sh
-      
+
     - name: Build and push Docker image (cache)
       uses: docker/build-push-action@v5
       with:
