--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -14,21 +14,29 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v2
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
       with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+        driver: docker-container
+
+    - name: Log in to GitHub Container Registry
+      run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u acc-vcc --password-stdin
+
+    - name: Make build.sh executable
+      run: chmod +x build.sh
 
     - name: Build and push Docker image (cache)
-      run: |
-        docker build -t ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest .
-        docker push ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        push: true
+        tags: ghcr.io/acc-vcc/action-test/qt-log4cpp-app:latest
+        cache-from: type=registry,ref=ghcr.io/acc-vcc/action-test/qt-log4cpp-app:cache
+        cache-to: type=registry,ref=ghcr.io/acc-vcc/action-test/qt-log4cpp-app:cache,mode=max
 
     - name: Run build (make only for PR)
       if: github.event_name == 'pull_request'
-      run: docker run --rm -v ${{ github.workspace }}:/app ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest make
+      run: docker run --rm -v ${{ github.workspace }}:/app ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest ./build.sh
 
   package:
     if: github.event_name == 'push'
@@ -40,17 +48,13 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Log in to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
+      run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u acc-vcc --password-stdin
 
     - name: Pull cached Docker image
-      run: docker pull ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest
+      run: docker pull ghcr.io/acc-vcc/action-test/qt-log4cpp-app:latest
 
     - name: Run package (make package)
-      run: docker run --rm -v ${{ github.workspace }}:/app ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest make package
+      run: docker run --rm -v ${{ github.workspace }}:/app ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest ./build.sh package
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
