--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -67,13 +67,15 @@ jobs:
         run: |
           mkdir -p bin
           docker run --rm -v ${{ github.workspace }}:/out ghcr.io/${{ github.repository }}/qt-log4cpp-bin:latest \
-            cp -r /artifact/. /out/bin/
+            cp -r /artifact/bin /out/bin
 
-      - name: Create tar.gz
-        run: tar zcvf bin.tar.gz bin
+      - name: Create artifact name (timestamp)
+        run: |
+          ts=$(date +%Y%m%d%H%M%S)
+          echo "ARTIFACT_NAME=bin${ts}" >> $GITHUB_ENV
 
-      - name: Upload artifact
+      - name: Upload artifact (upload bin directory as-is)
         uses: actions/upload-artifact@v4
         with:
-          name: qt-log4cpp-bin
-          path: bin.tar.gz
+          name: ${{ env.ARTIFACT_NAME }}
+          path: bin
