--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -15,8 +15,20 @@ jobs:
     if: github.event_name == 'pull_request'
 
     steps:
-      - name: Checkout code
+      - name: Checkout code (full history for diff)
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Detect changed groups
+        id: filter
+        uses: dorny/paths-filter@v2
+        with:
+          filters: |
+            app1:
+              - 'app1/**'
+            app2:
+              - 'app2/**'
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -26,8 +38,8 @@ jobs:
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u acc-vcc --password-stdin
 
-      - name: Make build.sh copy.sh executable
-        run: chmod +x build.sh copy.sh || true
+      #- name: Make build.sh copy.sh executable
+      #  run: chmod +x build.sh copy.sh || true
 
       - name: Build and push Docker image (cache)
         uses: docker/build-push-action@v5
@@ -38,11 +50,19 @@ jobs:
           cache-from: type=registry,ref=ghcr.io/acc-vcc/action-test/qt-log4cpp-app:cache
           cache-to: type=registry,ref=ghcr.io/acc-vcc/action-test/qt-log4cpp-app:cache,mode=max
 
-      - name: Run build (make only for PR)
-        run: docker run --rm -v ${{ github.workspace }}:/app ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest ./build.sh
+      - name: Build and Copy artifacts app1 (only if changed)
+        if: steps.filter.outputs.app1 == 'true'
+        run: |
+          echo "=== Building app1 ==="
+          docker run --rm -v ${{ github.workspace }}:/app ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest \
+            sh -c "cd /app/app1 && chmod +x build.sh copy.sh || true && ./build.sh && ./copy.sh || true"
 
-      - name: Copy artifacts
-        run: ./copy.sh  # ← 成果物コピー処理をスクリプト化
+      - name: Build and Copy artifacts app2 (only if changed)
+        if: steps.filter.outputs.app2 == 'true'
+        run: |
+          echo "=== Building app2 ==="
+          docker run --rm -v ${{ github.workspace }}:/app ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest \
+            sh -c "cd /app/app2 && chmod +x build.sh copy.sh || true && ./build.sh && ./copy.sh || true"
         
       - name: Show host-side output directory (copy source)
         run: |
