--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -141,6 +141,15 @@ jobs:
         run: |
           ts=$(date +%Y%m%d%H%M%S)
           echo "ARTIFACT_NAME=release${ts}" >> $GITHUB_ENV
+      - name: Upload changed outputs
+        run: |
+          set -e
+          for d in outData/*; do
+            [ -d "$d" ] || continue
+            name=$(basename "$d")
+            echo "Uploading $d as ${name}-${GITHUB_SHA::8}"
+            gh run upload-artifact --name "${name}-${GITHUB_SHA::8}" --path "$d" || true
+          done
 
       #- name: Upload artifact (upload bin directory as-is)
       #  uses: actions/upload-artifact@v4
