--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -98,7 +98,8 @@ jobs:
     #if: github.event_name == 'push'
     needs: build
     runs-on: ubuntu-latest
-
+    outputs:
+      ALL_OUTPUT_ARTIFACT: all-output
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -111,48 +112,111 @@ jobs:
           image_latest="${{ needs.build.outputs.IMAGE_REF_LATEST }}"
           echo "Pulling ${image_latest}"
           docker pull "${image_latest}"
-          
+
       - name: Extract artifacts
         run: |
           mkdir -p outData
-          #echo "=== Host: ./outData (before) ==="
-          #ls -la outData || true
-          #echo "=== Host: ./outData recursive (before) ==="
-          #ls -R outData || true
-
-          #echo "=== Image: /artifact (before) ==="
-          #docker run --rm "${{ needs.build.outputs.IMAGE_REF_LATEST }}" \
-          #  sh -c "ls -la /artifact || true; echo '--- recursive ---'; ls -R /artifact || true"
-
-          echo "=== Copying /artifact -> outData/bin ==="
           docker run --rm -v ${{ github.workspace }}:/out "${{ needs.build.outputs.IMAGE_REF_LATEST }}" \
             sh -c "cp -r /artifact/. /out/outData"
+          echo "=== Host: outData ==="
+          ls -la outData || true
+          ls -R outData || true
 
-          #echo "=== Host: ./outData (after) ==="
-          #ls -la outData
-          #echo "=== Host: ./outData recursive (after) ==="
-          #ls -R outData
+      - name: Upload all output as single artifact
+        # 中間出力
+        uses: actions/upload-artifact@v4
+        with:
+          name: all-output
+          path: outData
 
-          #echo "=== Image: /artifact (after) ==="
-          #docker run --rm "${{ needs.build.outputs.IMAGE_REF_LATEST }}" \
-          #  sh -c "ls -la /artifact || true; echo '--- recursive ---'; ls -R /artifact || true"
+  detect-outputs:
+    needs: package
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set_matrix.outputs.matrix }}
+    steps:
+      - name: Download all-output
+        uses: actions/download-artifact@v4
+        with:
+          name: all-output
+          path: all-output
 
-      - name: Create artifact name (timestamp)
+      - name: Detect subdirectories and emit matrix
+        id: set_matrix
         run: |
-          ts=$(date +%Y%m%d%H%M%S)
-          echo "ARTIFACT_NAME=release${ts}" >> $GITHUB_ENV
-      - name: Upload changed outputs
-        run: |
-          set -e
-          for d in outData/*; do
-            [ -d "$d" ] || continue
-            name=$(basename "$d")
-            echo "Uploading $d as ${name}-${GITHUB_SHA::8}"
-            gh run upload-artifact --name "${name}-${GITHUB_SHA::8}" --path "$d" || true
-          done
+          cd all-output || exit 0
+          # list only directories directly under outData
+          dirs=$(find . -maxdepth 1 -mindepth 1 -type d -printf '%P\n' | sort -u)
+          if [ -z "$dirs" ]; then
+            echo "matrix=[]" >> $GITHUB_OUTPUT
+            echo "::warning file=detect-outputs::no subdirectories found under outData"
+          else
+            # convert to JSON array
+            json=$(printf '%s\n' $dirs | jq -R -s -c 'split("\n")[:-1]')
+            echo "matrix=$json" >> $GITHUB_OUTPUT
+          fi
 
-      #- name: Upload artifact (upload bin directory as-is)
-      #  uses: actions/upload-artifact@v4
-      #  with:
-      #    name: ${{ env.ARTIFACT_NAME }}
-      #    path: outData
+  upload-per-dir:
+    needs: detect-outputs
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        dir: ${{ fromJson(needs.detect-outputs.outputs.matrix) }}
+    steps:
+      - name: Download all-output
+        uses: actions/download-artifact@v4
+        with:
+          name: all-output
+          path: all-output
+
+      - name: Normalize dir name
+        id: norm
+        run: |
+          dir="${{ matrix.dir }}"
+          # safe name for artifact (no slashes, spaces)
+          safe=$(echo "$dir" | tr '/ ' '_' | tr -cd '[:alnum:]_-')
+          echo "safe=$safe" >> $GITHUB_OUTPUT
+
+      - name: Upload artifact for directory
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ steps.norm.outputs.safe }}-${{ github.sha::8 }}
+          path: all-output/${{ matrix.dir }}
+
+  # 中間出力削除
+  cleanup-intermediate:
+    needs: upload-per-dir
+    runs-on: ubuntu-latest
+    if: always()
+    steps:
+      - name: Install jq (if needed)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq
+
+      - name: Delete intermediate artifact all-output
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REPO: ${{ github.repository }}
+          RUN_ID: ${{ github.run_id }}
+        run: |
+          set -euo pipefail
+          echo "Listing artifacts for run ${RUN_ID} in ${REPO}..."
+          artifacts_json=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" \
+            "https://api.github.com/repos/${REPO}/actions/runs/${RUN_ID}/artifacts")
+          id=$(echo "$artifacts_json" | jq -r '.artifacts[] | select(.name=="all-output") | .id' || true)
+          if [ -z "$id" ] || [ "$id" = "null" ]; then
+            echo "No all-output artifact found; nothing to delete."
+            exit 0
+          fi
+          echo "Found artifact id: $id. Deleting..."
+          resp=$(curl -s -o /dev/null -w "%{http_code}" -X DELETE \
+            -H "Authorization: token ${GITHUB_TOKEN}" \
+            "https://api.github.com/repos/${REPO}/actions/artifacts/${id}")
+          if [ "$resp" = "204" ]; then
+            echo "Deleted artifact id ${id} successfully."
+          else
+            echo "Failed to delete artifact id ${id}. HTTP status: $resp"
+            exit 1
+          fi
