--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -1,5 +1,9 @@
 name: CI/CD with Docker Cache (Qt + log4cpp)
 
+permissions:
+  actions: write
+  contents: read
+
 on:
   pull_request:
     branches: [ main ]
