--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -1,5 +1,9 @@
 name: CI/CD with Docker Cache (Qt + log4cpp)
 
+permissions:
+  actions: write
+  contents: read
+
 on:
   pull_request:
     branches: [ main ]
@@ -9,11 +13,26 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      IMAGE_REF_SHA: ${{ steps.set_image_ref.outputs.image_ref_sha }}
+      IMAGE_REF_LATEST: ${{ steps.set_image_ref.outputs.image_ref_latest }}
     if: github.event_name == 'pull_request'
 
     steps:
-      - name: Checkout code
+      - name: Checkout code (full history for diff)
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Detect changed groups
+        id: filter
+        uses: dorny/paths-filter@v2
+        with:
+          filters: |
+            app1:
+              - 'app1/**'
+            app2:
+              - 'app2/**'
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -23,8 +42,8 @@ jobs:
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u acc-vcc --password-stdin
 
-      - name: Make build.sh copy.sh executable
-        run: chmod +x build.sh copy.sh
+      #- name: Make build.sh copy.sh executable
+      #  run: chmod +x build.sh copy.sh || true
 
       - name: Build and push Docker image (cache)
         uses: docker/build-push-action@v5
@@ -35,24 +54,56 @@ jobs:
           cache-from: type=registry,ref=ghcr.io/acc-vcc/action-test/qt-log4cpp-app:cache
           cache-to: type=registry,ref=ghcr.io/acc-vcc/action-test/qt-log4cpp-app:cache,mode=max
 
-      - name: Run build (make only for PR)
-        run: docker run --rm -v ${{ github.workspace }}:/app ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest ./build.sh
+      - name: Build and Copy artifacts app1 (only if changed)
+        if: steps.filter.outputs.app1 == 'true'
+        run: |
+          echo "=== Building app1 ==="
+          docker run --rm -v ${{ github.workspace }}:/app ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest \
+            sh -c "cd /app/app1 && chmod +x build.sh copy.sh || true && ./build.sh && ./copy.sh"
 
-      - name: Copy artifacts
-        run: ./copy.sh   # ← 成果物コピー処理をスクリプト化
+      - name: Build and Copy artifacts app2 (only if changed)
+        if: steps.filter.outputs.app2 == 'true'
+        run: |
+          echo "=== Building app2 ==="
+          docker run --rm -v ${{ github.workspace }}:/app ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest \
+            sh -c "cd /app/app2 && chmod +x build.sh copy.sh || true && ./build.sh && ./copy.sh"
+        
+      - name: Show host-side output directory (copy source)
+        run: |
+          echo "=== Host: output/ (コピー元) ==="
+          ls -la output || true
+          echo "=== Recursive listing ==="
+          ls -R output || true
+          
+      - name: Create image tags and set outputs
+        id: set_image_ref
+        run: |
+          short_sha=${GITHUB_SHA::8}
+          tag_sha="sha-${short_sha}"
+          tag_latest="latest"
+          image_base="ghcr.io/${{ github.repository }}/qt-log4cpp-bin"
+          image_ref_sha="${image_base}:${tag_sha}"
+          image_ref_latest="${image_base}:${tag_latest}"
+          echo "image_ref_sha=${image_ref_sha}" >> $GITHUB_OUTPUT
+          echo "image_ref_latest=${image_ref_latest}" >> $GITHUB_OUTPUT
+          echo "Created tags: ${image_ref_sha} and ${image_ref_latest}"
         
       - name: Build artifact image
+        env:
+          IMAGE_SHA: ${{ steps.set_image_ref.outputs.image_ref_sha }}
+          IMAGE_LATEST: ${{ steps.set_image_ref.outputs.image_ref_latest }}
         run: |
-          docker build -t ghcr.io/${{ github.repository }}/qt-log4cpp-bin:latest -f- . <<EOF
-          FROM alpine:3.19
-          COPY output/ /artifact/
-          EOF
-          docker push ghcr.io/${{ github.repository }}/qt-log4cpp-bin:latest
+          # Dockerfile.artifact は output/ を /artifact にコピーする最小箱
+          docker build -t "${IMAGE_SHA}" -t "${IMAGE_LATEST}" -f Dockerfile.artifact .
+          docker push "${IMAGE_SHA}"
+          docker push "${IMAGE_LATEST}"
 
   package:
     if: github.event_name == 'push'
+    #needs    #ne
     runs-on: ubuntu-latest
-
+    outputs:
+      ALL_OUTPUT_ARTIFACT: all-output
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -60,22 +111,117 @@ jobs:
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u acc-vcc --password-stdin
 
-      - name: pull artifact image
-        run: docker pull ghcr.io/${{ github.repository }}/qt-log4cpp-bin:latest
+      - name: Pull latest artifact image
+        run: |
+          image_latest="${{ needs.build.outputs.IMAGE_REF_LATEST }}"
+          echo "Pulling ${image_latest}"
+          docker pull "${image_latest}"
 
       - name: Extract artifacts
         run: |
-          mkdir -p bin
-          docker run --rm -v ${{ github.workspace }}:/out ghcr.io/${{ github.repository }}/qt-log4cpp-bin:latest \
-            cp -r /artifact/bin /out/bin
+          mkdir -p outData
+          docker run --rm -v ${{ github.workspace }}:/out "${{ needs.build.outputs.IMAGE_REF_LATEST }}" \
+            sh -c "cp -r /artifact/. /out/outData"
+          echo "=== Host: outData ==="
+          ls -la outData || true
+          ls -R outData || true
 
-      - name: Create artifact name (timestamp)
-        run: |
-          ts=$(date +%Y%m%d%H%M%S)
-          echo "ARTIFACT_NAME=bin${ts}" >> $GITHUB_ENV
-
-      - name: Upload artifact (upload bin directory as-is)
+      - name: Upload all output as single artifact
+        # 中間出力
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ env.ARTIFACT_NAME }}
-          path: bin
+          name: all-output
+          path: outData
+
+  detect-outputs:
+    needs: package
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set_matrix.outputs.matrix }}
+    steps:
+      - name: Download all-output
+        uses: actions/download-artifact@v4
+        with:
+          name: all-output
+          path: all-output
+
+      - name: Detect subdirectories and emit matrix
+        id: set_matrix
+        run: |
+          cd all-output || exit 0
+          # list only directories directly under outData
+          dirs=$(find . -maxdepth 1 -mindepth 1 -type d -printf '%P\n' | sort -u)
+          if [ -z "$dirs" ]; then
+            echo "matrix=[]" >> $GITHUB_OUTPUT
+            echo "::warning file=detect-outputs::no subdirectories found under outData"
+          else
+            # convert to JSON array
+            json=$(printf '%s\n' $dirs | jq -R -s -c 'split("\n")[:-1]')
+            echo "matrix=$json" >> $GITHUB_OUTPUT
+          fi
+
+  upload-per-dir:
+    needs: detect-outputs
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        dir: ${{ fromJson(needs.detect-outputs.outputs.matrix) }}
+    steps:
+      - name: Download all-output
+        uses: actions/download-artifact@v4
+        with:
+          name: all-output
+          path: all-output
+          
+      - name: Normalize dir name and set short sha
+        id: norm
+        run: |
+          dir="${{ matrix.dir }}"
+          safe=$(echo "$dir" | tr '/ ' '_' | tr -cd '[:alnum:]_-')
+          short=${GITHUB_SHA::8}
+          echo "safe=$safe" >> $GITHUB_OUTPUT
+          echo "short=$short" >> $GITHUB_OUTPUT
+
+      - name: Upload artifact for directory
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ steps.norm.outputs.safe }}-${{ steps.norm.outputs.short }}
+          path: all-output/${{ matrix.dir }}
+
+  # 中間出力削除
+  cleanup-intermediate:
+    needs: upload-per-dir
+    runs-on: ubuntu-latest
+    if: ${{ needs.upload-per-dir.result == 'success' }}
+    steps:
+      - name: Install jq (if needed)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq
+
+      - name: Delete intermediate artifact all-output
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          REPO: ${{ github.repository }}
+          RUN_ID: ${{ github.run_id }}
+        run: |
+          set -euo pipefail
+          echo "Listing artifacts for run ${RUN_ID} in ${REPO}..."
+          artifacts_json=$(curl -s -H "Authorization: token ${GITHUB_TOKEN}" \
+            "https://api.github.com/repos/${REPO}/actions/runs/${RUN_ID}/artifacts")
+          id=$(echo "$artifacts_json" | jq -r '.artifacts[] | select(.name=="all-output") | .id' || true)
+          if [ -z "$id" ] || [ "$id" = "null" ]; then
+            echo "No all-output artifact found; nothing to delete."
+            exit 0
+          fi
+          echo "Found artifact id: $id. Deleting..."
+          resp=$(curl -s -o /dev/null -w "%{http_code}" -X DELETE \
+            -H "Authorization: token ${GITHUB_TOKEN}" \
+            "https://api.github.com/repos/${REPO}/actions/artifacts/${id}")
+          if [ "$resp" = "204" ]; then
+            echo "Deleted artifact id ${id} successfully."
+          else
+            echo "Failed to delete artifact id ${id}. HTTP status: $resp"
+            exit 1
+          fi
