--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -99,8 +99,9 @@ jobs:
           docker push "${IMAGE_LATEST}"
 
   package:
-    if: github.event_name == 'push'
-    #needs    #ne
+    # fork PR では secrets が使えないため、fork の場合はジョブ自体をスキップする例
+    if: ${{ github.event.pull_request == null || github.event.pull_request.head.repo.full_name == github.repository }}
+    #needs: build
     runs-on: ubuntu-latest
     outputs:
       ALL_OUTPUT_ARTIFACT: all-output
@@ -108,19 +109,27 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Set image ref fallback to latest
+        id: set_image_ref_pkg
+        run: |
+          # Try to use a deterministic latest tag; you can change to plain :latest if preferred
+          image_fallback="ghcr.io/${{ github.repository }}/qt-log4cpp-bin:latest"
+          echo "image_ref_latest=${image_fallback}" >> $GITHUB_OUTPUT
+
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.GHCR_PAT }}" | docker login ghcr.io -u acc-vcc --password-stdin
 
       - name: Pull latest artifact image
+        id: pull_image
         run: |
-          image_latest="${{ needs.build.outputs.IMAGE_REF_LATEST }}"
+          image_latest="${{ steps.set_image_ref_pkg.outputs.image_ref_latest }}"
           echo "Pulling ${image_latest}"
           docker pull "${image_latest}"
 
       - name: Extract artifacts
         run: |
           mkdir -p outData
-          docker run --rm -v ${{ github.workspace }}:/out "${{ needs.build.outputs.IMAGE_REF_LATEST }}" \
+          docker run --rm -v ${{ github.workspace }}:/out "${{ steps.set_image_ref_pkg.outputs.image_ref_latest }}" \
             sh -c "cp -r /artifact/. /out/outData"
           echo "=== Host: outData ==="
           ls -la outData || true
