--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -100,7 +100,7 @@ jobs:
 
   package:
     # fork PR では secrets が使えないため、fork の場合はジョブ自体をスキップする例
-    if: ${{ github.event.pull_request == null || github.event.pull_request.head.repo.full_name == github.repository }}
+    if: ${{ github.event_name == 'push' }}
     #needs: build
     runs-on: ubuntu-latest
     outputs:
