--- a/.github/workflows/cpp-test.yml
+++ b/.github/workflows/cpp-test.yml
@@ -26,6 +26,7 @@ jobs:
 
       - name: Detect changed groups
         id: filter
+        # 変化があるディレクトリを選定
         uses: dorny/paths-filter@v2
         with:
           filters: |
@@ -33,6 +34,12 @@ jobs:
               - 'app1/**'
             app2:
               - 'app2/**'
+            app3:
+              - 'app3/**'
+            dockerfile:
+              - 'Dockerfile'
+            dockerfile_java:
+              - 'Dockerfile.java'
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -44,29 +51,70 @@ jobs:
 
       #- name: Make build.sh copy.sh executable
       #  run: chmod +x build.sh copy.sh || true
+          
+      # -----------------------
+      # C++ 環境イメージ（使い回し + キャッシュ）
+      # -----------------------
+      - name: Try to pull C++ env image (use cached env if available)
+        run: |
+          if docker pull ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest; then
+            echo "pulled_cpp=true" >> $GITHUB_OUTPUT
+          else
+            echo "pulled_cpp=false" >> $GITHUB_OUTPUT
+          fi
 
       - name: Build and push Docker image (cache)
+        if: steps.pull_java_env.outputs.pulled_cpp == 'false' || steps.filter.outputs.dockerfile == 'true'  # Dockerfileに変更があれば再ビルド
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: ghcr.io/acc-vcc/action-test/qt-log4cpp-app:latest
-          cache-from: type=registry,ref=ghcr.io/acc-vcc/action-test/qt-log4cpp-app:cache
-          cache-to: type=registry,ref=ghcr.io/acc-vcc/action-test/qt-log4cpp-app:cache,mode=max
-
+          tags: ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest,ghcr.io/${{ github.repository }}/qt-log4cpp-app:sha-${{ github.sha }}
+          cache-from: type=registry,ref=ghcr.io/${{ github.repository }}/qt-log4cpp-app:cache
+          cache-to: type=registry,ref=ghcr.io/${{ github.repository }}/qt-log4cpp-app:cache,mode=max
+          
+      # -----------------------
+      # Java 環境イメージ（使い回し + キャッシュ）
+      # -----------------------
+      - name: Try to pull Java env image (use cached env if available)
+        run: |
+          if docker pull ghcr.io/${{ github.repository }}/java-app:latest; then
+            echo "pulled_java=true" >> $GITHUB_OUTPUT
+          else
+            echo "pulled_java=false" >> $GITHUB_OUTPUT
+          fi
+          
+      - name: Build and push Java env image (with cache)  # 必要時に再ビルドしてキャッシュ保存
+        if: steps.pull_java_env.outputs.pulled_java == 'false' || steps.filter.outputs.dockerfile_java == 'true'  # Dockerfile.javaに変更があれば再ビルド
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: Dockerfile.java
+          push: true
+          tags: ghcr.io/${{ github.repository }}/java-app:latest,ghcr.io/${{ github.repository }}/java-app:sha-${{ github.sha }}
+          cache-from: type=registry,ref=ghcr.io/${{ github.repository }}/java-app:cache
+          cache-to: type=registry,ref=ghcr.io/${{ github.repository }}/java-app:cache,mode=max
+          
       - name: Build and Copy artifacts app1 (only if changed)
         if: steps.filter.outputs.app1 == 'true'
         run: |
           echo "=== Building app1 ==="
-          docker run --rm -v ${{ github.workspace }}:/app ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest \
-            sh -c "cd /app/app1 && chmod +x build.sh copy.sh || true && ./build.sh && ./copy.sh"
+          docker run --rm -v ${{ github.workspace }}:/app -w /app/app1 ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest \
+            sh -c "chmod +x build.sh copy.sh || true && ./build.sh && ./copy.sh"
 
       - name: Build and Copy artifacts app2 (only if changed)
         if: steps.filter.outputs.app2 == 'true'
         run: |
           echo "=== Building app2 ==="
-          docker run --rm -v ${{ github.workspace }}:/app ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest \
-            sh -c "cd /app/app2 && chmod +x build.sh copy.sh || true && ./build.sh && ./copy.sh"
+          docker run --rm -v ${{ github.workspace }}:/app -w /app/app2 ghcr.io/${{ github.repository }}/qt-log4cpp-app:latest \
+            sh -c "chmod +x build.sh copy.sh || true && ./build.sh && ./copy.sh"
+        
+      - name: Build and Copy artifacts app3 (only if changed)
+        if: steps.filter.outputs.app3 == 'true'
+        run: |
+          echo "=== Building app3 ==="
+          docker run --rm -v ${{ github.workspace }}:/app -w /app/app3 ghcr.io/${{ github.repository }}/java-app:latest \
+            sh -c "chmod +x build.sh copy.sh || true && ./build.sh && ./copy.sh"
         
       - name: Show host-side output directory (copy source)
         run: |
